[package]
name = "lddtree"
version = "0.3.7"
edition = "2021"
description = "Read the ELF dependency tree"
license = "MIT"
keywords = ["ldd", "elf"]
readme = "README.md"
repository = "https://github.com/messense/lddtree-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fs-err = "3.0.0"
glob = "0.3.0"
goblin = "0.9.0"
